--- a/player.css
+++ b/player.css
@@ -38,14 +38,15 @@
 
 .bar-video-player {
     width: 100%;
-    height: 10px;
+    height: 5px;
     top: 0;
     left: 0;
+    cursor: pointer;
 }
 
 .progess-bar-video-player {
     background-color: #fdcb6e;
-    height: 10px;
+    height: 5px;
 }
 
 .tool-video-player {
